k8s-10-ingress/k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: admin-ingress

spec:
  replicas: 1

  selector:
    matchLabels:
      app: admin

  template:
    metadata:
      labels:
        app: admin

    spec:
      containers:
      - name: admin

        image: admin:v1

        ports:
        - containerPort: 8000
