k8s-10-ingress/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ingress
  labels:
    app: frontend

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: frontend:v1

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 200m
            memory: 256Mi
