k8s-10-ingress/k8s/admin-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: admin-service-ingress

spec:
  selector:
    app: admin

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
