k8s-10-ingress/k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service-ingress

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
