k8s-10-ingress/k8s/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: host-routing

spec:
  ingressClassName: nginx
  rules:
  - host: api.company.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: admin.company.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80
  - host: shop.company.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
